# vrlib

./: .gitignore  CMakeLists.txt  README.md
includes/glad/: glad.h
includes/vrlib/: Point.h  Wireframe.h  shader.h
includes/vrlib_vr/: Trans_Stack.h  render.h
src/: Point.cpp  Wireframe.cpp  args.txt  main.cpp  render.C  testmain
src/shader/: shader.frag  shader.vert
src/util/: glad.c
src/vr/: Map.C  Trans_Stack.C  image.C  image_composite.C  render.C  render_aux.C  testmain.C
